--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </a>
 
           <!-- Hamburger menu icon for mobile view -->
-          <label for="nav-check" class="z-30 text-2xl lg:hidden">
+          <label for="nav-check" class="z-30 text-3xl lg:hidden">
             <i class="fas fa-bars"></i>
           </label>
           <!-- Hidden checkbox for the mobile menu toggle -->
@@ -261,7 +261,7 @@
         </div>
 
         <!-- Features Section -->
-        <div class="mt-16 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3">
+        <div class="mt-12 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3">
           <!-- A grid layout for features, with one column on small screens, two columns on medium screens, 
                and three columns on large screens. Margins and gaps are applied for spacing. -->
 
@@ -372,7 +372,7 @@
                  taking full width on small screens and 5/12 width on large screens -->
 
             <div
-              class="absolute -left-3 -top-3 z-0 h-full w-full rounded-2xl bg-primary-light lg:-left-16 lg:-top-10"
+              class="absolute left-0 top-0 z-0 h-5/6 w-11/12 rounded-2xl bg-primary-light"
               data-aos="fade-right"
               data-aos-duration="1000"
               data-aos-delay="100"
@@ -380,13 +380,17 @@
             <!-- A background decoration with a light primary color, positioned absolutely 
                  to create an offset shadow effect behind the image. It animates by fading in from the right. -->
 
-            <img
-              src="./assets/images/revolutionize.jpeg"
-              class="relative left-3 top-3 h-full rounded-2xl object-cover shadow-[24px_30px_51px_0_#0000001A]"
-              alt="revolutionize"
+            <div
+              class="h-full pl-4 pt-4 lg:pl-16 lg:pt-10"
               data-aos="fade-right"
               data-aos-duration="1000"
-            />
+            >
+              <img
+                src="./assets/images/revolutionize.jpeg"
+                class="h-80 w-full rounded-2xl object-cover shadow-[24px_30px_51px_0_#0000001A] lg:h-full"
+                alt="revolutionize"
+              />
+            </div>
             <!-- Main image with rounded corners, positioned relatively to overlap the background decoration.
                  It has a shadow effect and animates by fading in from the right. -->
           </div>
@@ -396,12 +400,12 @@
 
             <h2 data-aos="fade-left" data-aos-duration="1000">
               <!-- Heading with animation to fade in from the left -->
-              Revolutionizing Finance with NextGen Credit
+              Revolutionizing Finance with Finaura Credit
             </h2>
 
             <p class="mb-6 mt-4" data-aos="fade-left" data-aos-duration="1000">
               <!-- Paragraph with top and bottom margins, animating by fading in from the left -->
-              At NextGen Credit, we're not just another financial institution –
+              At Finaura Credit, we're not just another financial institution –
               we're pioneers in the credit industry, committed to empowering
               individuals with innovative financial solutions. Founded in 2020
               by a team of fintech experts and customer advocates, we've made it
@@ -492,8 +496,152 @@
 
             <div class="mt-10" data-aos="fade-left" data-aos-duration="1000">
               <!-- Button container with top margin and animation to fade in from the left -->
-              <button>Join NextGen Credit Today</button>
+              <button>Join Finaura Credit Today</button>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Plans -->
+
+      <section class="bg-background py-7 md:py-14 lg:py-28">
+        <div class="container">
+          <h2
+            class="text-center"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
+            Choose Your Perfect Card
+          </h2>
+          <p
+            class="mx-auto mt-4 text-center lg:w-3/4"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
+            In today's fast-paced digital world, your credit card should do more
+            than just facilitate transactions. At Finora Credit, we've
+            reimagined what a credit card can be, integrating cutting-edge
+            technology with your everyday financial need
+          </p>
+
+          <div
+            class="mt-10 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3"
+          >
+            <article
+              class="bg-white p-4"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+            >
+              <img src="./assets/images/plans/Rectangle 34625302.jpg" alt="" />
+
+              <h4 class="mb-2 mt-4">Finora Platinum</h4>
+              <p class="mb-3 text-[#232323]">
+                For the discerning spender with premium benefits and high
+                rewards.
+              </p>
+
+              <ul class="mb-4 flex flex-col gap-4 font-semibold capitalize">
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Exclusive access to airport lounges
+                </li>
+
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Personal concierge service
+                </li>
+
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  High reward points on every purchase
+                </li>
+
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Travel insurance coverage
+                </li>
+              </ul>
+
+              <button class="px-4 py-2">Learn More</button>
+            </article>
+
+            <article
+              class="bg-white p-4 pr-1"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+              data-aos-delay="100"
+            >
+              <img
+                src="./assets/images/plans/Rectangle 34625302-1.jpg"
+                alt=""
+              />
+
+              <h4 class="mb-2 mt-4">Finora Rewards</h4>
+              <p class="mb-3 pr-3 text-[#232323]">
+                Maximize your everyday spending with our top-tier rewards
+                program.
+              </p>
+
+              <ul class="mb-4 flex flex-col gap-4 font-semibold capitalize">
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Cashback on groceries and dining
+                </li>
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Bonus points on travel and entertainment
+                </li>
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Low interest rates
+                </li>
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  No annual fee
+                </li>
+              </ul>
+
+              <button class="px-4 py-2">Learn More</button>
+            </article>
+
+            <article
+              class="bg-white p-4"
+              data-aos="fade-up"
+              data-aos-duration="1000"
+              data-aos-delay="200"
+            >
+              <img
+                src="./assets/images/plans/Rectangle 34625302-2.jpg"
+                alt=""
+              />
+
+              <h4 class="mb-2 mt-4">Finora Student</h4>
+              <p class="mb-3 text-[#232323]">
+                Build your credit history with a card tailored for students'
+                needs.
+              </p>
+
+              <ul class="mb-4 flex flex-col gap-4 font-semibold capitalize">
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Low credit limit to prevent overspending
+                </li>
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Cashback on school supplies and books
+                </li>
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  No annual fee
+                </li>
+                <li class="flex items-center gap-2 xl:whitespace-nowrap">
+                  <i class="fa fa-check text-sm text-primary"></i>
+                  Credit education resources
+                </li>
+              </ul>
+
+              <button class="px-4 py-2">Learn More</button>
+            </article>
           </div>
         </div>
       </section>
@@ -516,7 +664,7 @@
         >
           <!-- Container with flexbox to arrange content vertically on small screens, horizontally on large screens. -->
 
-          <aside class="w-full lg:w-7/12">
+          <aside class="order-2 w-full lg:order-1 lg:w-7/12">
             <!-- Left side content area taking full width on small screens, 7/12 on large screens. -->
 
             <h2 class="mb-4" data-aos="fade-right" data-aos-duration="1000">
@@ -634,29 +782,33 @@
             </div>
 
             <div class="mt-10" data-aos="fade-right" data-aos-duration="1000">
-              <button>Join NextGen Credit Today</button>
+              <button>Join Finaura Credit Today</button>
             </div>
             <!-- Call-to-action button to join, animated to fade in from the right. -->
           </aside>
 
-          <aside class="relative w-full lg:w-5/12">
+          <aside class="relative order-1 w-full lg:order-2 lg:w-5/12">
             <!-- Right side content area, positioned relative with full width on small screens, 5/12 on large screens. -->
 
             <div
-              class="absolute left-4 top-4 z-0 h-full w-full rounded-2xl bg-primary-light lg:left-8 lg:top-8"
+              class="absolute -bottom-4 -right-0 z-0 h-5/6 w-11/12 rounded-2xl bg-primary-light"
               data-aos="fade-left"
               data-aos-duration="1000"
               data-aos-delay="100"
             ></div>
             <!-- A background element positioned behind the image, with animations and rounded corners. -->
 
-            <img
-              src="./assets/images/why-choose.jpeg"
-              class="aspect-square h-full rounded-2xl object-cover shadow-[24px_30px_51px_0_#0000001A]"
-              alt="revolutionize"
+            <div
+              class="pb-4 pr-4 lg:pb-8 lg:pr-8"
               data-aos="fade-left"
               data-aos-duration="1000"
-            />
+            >
+              <img
+                src="./assets/images/why-choose.jpeg"
+                class="aspect-square h-full rounded-2xl object-cover shadow-[24px_30px_51px_0_#0000001A]"
+                alt="revolutionize"
+              />
+            </div>
             <!-- The main image, styled to be square, with rounded corners, a shadow, and animated to fade in from the left. -->
           </aside>
         </div>
@@ -674,7 +826,7 @@
           >
             <!-- A container using grid layout, with one column on small screens and two columns on large screens. -->
 
-            <aside class="relative order-2 lg:static lg:order-1">
+            <aside class="relative lg:static">
               <!-- A side section, positioned relatively on small screens, static on large screens. -->
 
               <img
@@ -694,7 +846,7 @@
               <!-- Background image for the testimonial, positioned absolutely, partially offset to the left. It takes full width on small screens and half width on large screens. -->
             </aside>
 
-            <aside class="relative order-1 lg:order-2">
+            <aside class="relative">
               <!-- The second side section, with relative positioning. -->
 
               <h2
@@ -807,7 +959,7 @@
             <!-- Paragraph with a bottom margin, animated to fade in from the right. -->
 
             <div data-aos="fade-right" data-aos-duration="1000">
-              <button class="white">Join NextGen Credit Today</button>
+              <button class="white">Join Finaura Credit Today</button>
               <!-- Call-to-action button, animated to fade in from the right. -->
             </div>
           </div>
